5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1834_1274.log
== TEST (2019-06-30 18:39:28) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(" "))


a=zeros((x,x),dtype=int)

for i in range(0,x):
	if j in range(0,x)
		mat(i,j)=min(i,j)+1
		
prin()
	
-- ERROR:
File "XXXX", line 10
    if j in range(0,x)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:40:18) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(" "))


a=zeros((x,x),dtype=int)

for i in range(0,x):
	if j in range(0,x)
		a(i,j)=min(i,j)+1
		
print(a)
	
-- ERROR:
File "XXXX", line 10
    if j in range(0,x)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:40:37) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x),dtype=int)

for i in range(0,x):
	if j in range(0,x)
		a(i,j)=min(i,j)+1
		
print(a)	
-- ERROR:
File "XXXX", line 10
    if j in range(0,x)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:40:52) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x),dtype=int)

for i in range(0,x):
	if j in range(0,x):
		a(i,j)=min(i,j)+1
		
print(a)	
-- ERROR:
File "XXXX", line 11
    a(i,j)=min(i,j)+1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:42:03) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	if j in range(0,x):
		a(i,j)=min(i,j)+1
		
print(a)	
-- ERROR:
File "XXXX", line 11
    a(i,j)=min(i,j)+1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:42:05) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	if j in range(0,x):
		a(i,j)=min(i,j)+1
		
print(a)	
-- ERROR:
File "XXXX", line 11
    a(i,j)=min(i,j)+1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:42:14) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	if j in range(0,x):
		a[i,j]=min(i,j)+1
		
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 18:42:54) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		a[i,j]=min(i,j)+1
		
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 18:43:03) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		a[i,j]=min(i,j)+1
		
print(a)	
-- EXECUTION TIME:
1.20593
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:27:02) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for i in range(0,x):
		x[i,:]=min(w)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:27:21) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for i in range(0,x):
		x[i,:]=min(w[i,:])
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:28:13) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		x[i,j]=min(w[i,j]+1)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:29:03) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		w[i,j]=min((i,j)+1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:29:39) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		a[i,j]=min(i,j)+1
		
print(a)	x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		w[i,j]=min(i,j)+1
print(x)
-- ERROR:
File "XXXX", line 13
    print(a)	x=array(eval(input("")))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:29:45) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=int(input(""))


a=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		a[i,j]=min(i,j)+1
		
print(a)	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		w[i,j]=min(i,j)+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:30:23) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(1,x):
	for j in range(2,x):
		w[i,j]=min(i,j)+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:30:31) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(1,x):
	for j in range(2,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:30:46) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(2,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:30:57) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(1,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:31:13) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(1,x):
		w[i,j]=min(i,j)+2
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:31:54) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(1,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:32:08) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:10:02) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))


w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:12:07) 
-- CODE:
from numpy.linalg import*
from numpy import*

	
x=array(eval(input("")))
print(x)

w=zeros((x,x), dtype=int)

for i in range(0,x):
	for j in range(0,x):
		w[i,j]=min(i,j)+1
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
